New custom improvement: Natural 	-Acquired from leafstones, slowly heals the user and the tool over time while the tool is in the main hand. 	-Massively weakened leaf stone's tool properties, gonna need some integrity boosting to use them. Changed all evostone materials to require 3 times the amount Possibly understood how the attributes stack, changed swim speed bonus of waterstone to 75%/150%

--- a/kubejs/assets/tetra/lang/en_us.json
+++ b/kubejs/assets/tetra/lang/en_us.json
@@ -20,5 +20,7 @@
     "tetra.material.ice_stone.prefix": "Ice Stone",
     "tetra.material.shiny_stone.prefix": "Shiny Stone",
     "tetra.improvement.trait_waterstone.name": "Aquatic",
-    "tetra.improvement.trait_waterstone.description": "Holding this tool while underwater, grants extra mobility along with better vision and water breathing. This will slowly wear down the tool."
+    "tetra.improvement.trait_waterstone.description": "Holding this tool while underwater, grants extra mobility along with better vision and water breathing. This will slowly wear down the tool.",
+    "tetra.improvement.trait_leafstone.name": "Natural",
+    "tetra.improvement.trait_leafstone.description": "Leaf Stones aren't really meant for tools. However, their regenerative properties could prove useful. The tool will slowly heal you and itself while in yout main hand."
 }
